Configuration and VM based clock